<resources>
    <string name="app_name">NavigationTips</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="next_page">Next page</string>
    <string name="account">account</string>
    <string name="send_data">send Data</string>
    <string name="name">Name</string>
    <string name="navigation">navigation</string>
    <string name="user_pages">User Pages</string>
    <string name="hint_password">Enter  PassWord</string>
    <string name="hint_user_name">Enter  User Name</string>
    <string name="login">login</string>
    <string name="sing_up">Sing up</string>
    <string name="email">Email</string>
    <string name="family">family</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_to_send_this_money">Do you want to send this money?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">LogOut</string>

</resources>